<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_navigation">navigationActivity</string>
    <string name="title_profile">Профиль</string>
    <string name="title_chat">Оператор</string>
    <string name="title_info">Информация</string>
    <string name="text_with_link"><a href="http://pk2022.donntu.ru/abitmanual.pdf">Скачать инструкцию для этого приложения</a> </string>

    //Buttons
    <string name="next">Далее</string>
    <string name="Back">Назад</string>
    <string name="edit">Редактировать</string>
    <string name="all_correct">Всё верно!</string>
    <string name="commission">Приемная комиссия</string>
    <string name="donntu">ДонНТУ</string>
    <string name="_2023">2023</string>
    <string name="registration">Регистрация</string>

    //activity_reg_1
    <string name="_0_4">0/4</string>
    <string name="enter_fio">Введите ФИО</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="patronymic">Отчество</string>

    //activity_reg_2
    <string name="_1_4">1/4</string>
    <string name="enter_date">Укажите дату рождения</string>

    //activity_reg_3
    <string name="_2_4">2/4</string>
    <string name="enter_login_and_password">Введите логин и пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>

    //activity_reg_4
    <string name="_3_4">3/4</string>
    <string name="enter_contacts">Введите контактные данные</string>
    <string name="other_contacts">Другие контакты</string>
    <string name="number_phone">Номер телефона</string>
    <string name="email">Электронный адрес</string>
    <string name="consent_to_personal_data_proccessing">Даю согласие на использование моих персональных данных в электронной базе ДонНТУ и гарантирую их достоверность</string>
    <string name="register">Зарегистрироваться</string>
    <string name="answer">Ответ</string>

    //activity_confirm_reg
    <string name="profile_data">Данные Вашего профиля</string>
    <string name="confirm_registration_text">Пожалуйста, указывайте достоверные данные для облегчения труда оператора факультета, который, по мере необходимости, может связываться с Вами в процессе обработки Ваших документов.</string>
    <string name="textview">TextView</string>
    <string name="photo_id">ID фото:</string>
    <string name="registration_id">Регистрационный номер:</string>
    <string name="confirm_login">Логин:</string>
    <string name="confirm_fio">ФИО:</string>
    <string name="confirm_date">Дата рождения:</string>
    <string name="confirm_email">Email:</string>
    <string name="contacts">Контакты:</string>
    <string name="confirm_number_phone">Номер телефона:</string>

    //activity_personal_data1
    <string name="personal_data">Персональные данные</string>
    <string name="_0_3">0/3</string>
    <string name="enter_inn_and_citizenship">Введите свое гражданство и цифровой код ИНН(при наличии)</string>
    <string name="citizenship">Гражданство</string>
    <string name="inn">ИНН/РНУКН</string>
    <string name="language_question">Какой иностранный язык изучали?</string>
    <string name="english">Английский</string>
    <string name="deutsch">Немецкий</string>
    <string name="french">Французский</string>
    //activity_personal_data2
    <string name="_1_3">1/3</string>
    <string name="need_hostel">Требуется общежитие</string>
    <string name="enter_address">Укажите Ваши адреса регистрации и проживания</string>
    <string name="address_r">Адрес регистрации</string>
    <string name="locality">Населенный пункт</string>
    <string name="region">Область</string>
    <string name="district">Район</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира</string>
    <string name="postal_index">Почтовый индекс</string>
    <string name="address_p">Адрес проживания</string>
    <string name="same_address">Совпадает с адресом регистрации</string>
    //activity_personal_data3
    <string name="parents_address">Прописка (для абитуриентов \n без паспорта)</string>
    <string name="_2_3">2/3</string>
    <string name="enter_parents_data">Укажите данные Ваших родителей</string>
    <string name="father">Отец</string>
    <string name="mother">Мать</string>
    //activity_addition_photo
    <string name="add_user_photo">Добавьте фото абитуриента</string>
    <string name="correct_photo">Уважаемые абитуриенты, пожалуйста, добавляйте корректное фото (jpg, png) подобного вида:</string>
    //activity_addition_documents
    <string name="add_documents">Добавьте сканы документов</string>
    <string name="download_files">Загруженные файлы:</string>
    <string name="file_size">Допустимый размер файлов: 0 / 100 мегабайт</string>
    <string name="download_png">Загрузить в формате jpg/png</string>
    <string name="download_pdf">Загрузить в формате pdf</string>
    //activity_application_form1
    <string name="education_program_information">Информация об образовательной программе (ОП)</string>
    <string name="document1">Документ 1</string>
    <string name="based_education">Имею базовое образование:</string>
    <string name="op">Поступаю на ОП:</string>
    <string name="education_op">Образование по данной ОП:</string>
    <string name="have">Есть</string>
    <string name="not">Нет</string>
    <string name="during">Получаю</string>
    <string name="add_second_document">Если Вы хотите добавить второй документ, нажмите на кнопку</string>
    <string name="add_second_document_button">Добавить второй документ</string>
    <string name="document2">Документ 2</string>
    //activity_application_form2
    <string name="choice_speciality">Выбор направления подготовки (специальности)</string>
    <string name="pick_based_op_document">Укажите документ, относительно которого собираетесь формировать список направлений, затем для добавления направления нажмите на кнопку</string>
    <string name="based_op_document">Документ базового ОП</string>
    //dialog_add_speciality
    <string name="add_priority">Добавление приоритета</string>
    <string name="education_form">Форма обучения:</string>
    <string name="profile">Название направления (профиль)</string>
    <string name="pick">Выбрать</string>
    <string name="priority">Приоритет:</string>
    <string name="made">Готово</string>
    //documents_info_window
    <string name="addition_documents">Добавление документов</string>
    <string name="documents_list">Перечень неоходимых документов:</string>
    <string name="many_documents">- ИНН\n- Паспорт/Свидетельство о рождении/Вид на жительство/Временное удостоверение гражданина/Адресная справка\n- Документ об образовании\n- Сертификаты\n- Льготы\n- Результаты олимпиад\n- Приписное свидетельство\n- Медицинская справка 086-у</string>
    <string name="size_one_file">Допустимый размер одного файла - до 35 мегабайт.</string>
    <string name="size_all_files">Общий размер всех файлов не должен превышать 100 мегабайт.</string>
    <string name="ok">ОК</string>
    //fragment_profile
    <string name="place_for_name">Место для имени абитуриента</string>
    <string name="register_number">Ваш регистрационный номер:</string>
    <string name="id_photo">Ваше ID фото</string>
    <string name="documents_status">Статус Ваших документов:</string>
    <string name="in_processing">В ОБРАБОТКЕ</string>
    <string name="rating_id_button">Ваш рейтинг по ID фото</string>
    <string name="download_form_button">Ваша анкета (pdf)</string>
    <string name="download_documents">Загруженные документы (zip)</string>

    <string name="btn_faculty_email"><u>Почта факультета</u></string>
    <string name="btn_faculty_pk_email"><u>Почта приемной коммиссии</u></string>
    <string name="btn_faculty_site"><u>Сайт факультета</u></string>
    <string name="btn_faculty_phone_pk"><u>Телефон приемной коммиссии факультета</u></string>

    //ApplicationFormActivity2
    <string name="no_specialization_selected">Ни одно из направлений подготовки не выбрано!</string>
    <string name="directions_cannot_repeat">Направления подготовки не могут повторяться!</string>
    <string name="same_priorities">Обнаружены одинаковые приоритеты! Распределите приоритеты так, чтобы они не повторялись</string>
    <string name="max_priorities_reached">Нельзя добавить больше 6 приоритетов. Чтобы добавить новый, удалите какой-нибудь из существующих.</string>
    <string name="nothing_selected">Ничего не выбрано!</string>


</resources>