<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
tools:layout_editor_absoluteX="1dp"
tools:layout_editor_absoluteY="1dp"
style="@style/AppTheme">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".presentation.personal_data_activities.PersonalDataActivity1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/personal_data"
        android:textSize="34sp"
        android:textAllCaps="true"/>

    <ProgressBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="4dp"
        android:progress="0"
        android:scaleY="1">
    </ProgressBar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:text="@string/_0_3"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/enter_inn_and_citizenship"
        android:textSize="20sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserСitizenship"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:ems="10" android:hint="@string/citizenship"
            android:autofillHints="no"
            android:inputType="text|textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserINN"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:padding="8dp"
            android:ems="10"
            android:hint="@string/inn"
            android:autofillHints="no"
            android:inputType="textShortMessage"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:layout_marginStart="32dp"
        android:text="@string/language_question"
        android:textSize="20sp"/>


    <RadioGroup
        android:id="@+id/radioGroupLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deutsch"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/french"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="end"
        android:text="@string/next">
    </com.google.android.material.button.MaterialButton>
</LinearLayout>

</ScrollView>