<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">



    <fragment
    android:id="@+id/navigation_profile"
    android:name="com.example.myapplication.presentation.ui.home.ProfileFragment"
    android:label="@string/title_profile"
    tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_chat_with_operator"
        android:name="com.example.myapplication.presentation.ui.dashboard.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat_with_operator" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.myapplication.presentation.ui.information.NotificationsFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>