<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
tools:layout_editor_absoluteX="1dp"
tools:layout_editor_absoluteY="1dp"
style="@style/AppTheme">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".presentation.registration_activities.RegActivity3">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/registration"
        android:textSize="34sp"
        android:textAllCaps="true"/>

    <ProgressBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="4dp"
        android:progress="50"
        android:scaleY="1">
    </ProgressBar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:text="@string/_2_4"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/enter_login_and_password"
        android:textSize="20sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_person_24">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUserLogin"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:padding="8dp"
        android:ems="10"
        android:hint="@string/login"
        android:autofillHints="username"
        android:inputType="textPersonName"
        tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:passwordToggleEnabled="false"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserPassword"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:padding="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textShortMessage"
            android:longClickable="false"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:autofillHints="password"
            android:inputType="textShortMessage"
            android:longClickable="false"
            tools:ignore="TextContrastCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/next"
            app:elevation="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/Back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck">
        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>