<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
tools:layout_editor_absoluteX="1dp"
tools:layout_editor_absoluteY="1dp"
style="@style/AppTheme">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".presentation.registration_activities.RegActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/commission"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/_2023"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/donntu"
        android:textSize="28sp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registration"
            android:layout_width="250dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:text="Регистрация"
            style="@style/Widget.Material3.Button"
            tools:ignore="TextContrastCheck">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:text="Войти"
            style="@style/Widget.Material3.Button.OutlinedButton"
            tools:ignore="TextContrastCheck">
        </com.google.android.material.button.MaterialButton>

</LinearLayout>

</ScrollView>